# SteamPipeline

./: CMakeLists.txt
client/: CMakeLists.txt  ClientPipeline.cpp  ClientPipeline.h  client.cpp  client.h  dllmain.cpp  main.cpp
demo/: CMakeLists.txt  demo.cpp
hook/: CMakeLists.txt  RTTI.cpp  RTTI.h  hook.cpp
lib/: CMakeLists.txt  SocketPipeline.cpp  SocketPipeline.h  SteamPipeClient.cpp  SteamPipeClient.h  SteamPipeServer.cpp  SteamPipeServer.h  SteamSharedMemory.h
proxy/: index.js  package-lock.json  package.json
server/: CMakeLists.txt  ServerPipeline.cpp  ServerPipeline.h  dllmain.cpp  main.cpp  server.cpp  server.h
